--- a/index.html
+++ b/index.html
@@ -93,12 +93,8 @@
             <div style="width:500px;word-wrap: break-word;text-align: center;display: inline-block;">
             Co-Founder of "Macchako Lounge"<br><br>
 
-            Lorem ipsum dolor sit amet<br>
-            consectetur adipiscing elit sed do eiusmod<br>
-            tempor incididunt ut labore et dolore<br>
-            magna aliqua Ut enim ad minim veniam<br>
-            quis nostrud exercitation ullamco laboris<br>
-            nisi ut aliquip ex ea commodo consequat<br><br>
+            Enjoy playing video games and drawing<br>
+            Like to reminisce about things<br><br>
             Contact me on Discord: <a href="https://discordapp.com/users/352465651975061515" style="color: #8ce967;">Catys#3010</a><br><br><br>
             Socials<br>
             <a href="https://twitter.com/catysminy11" style="color:#8ce967; text-decoration: none;">Twitter</a> |
